# learning_repository

alphafold/: scratchpad.py
alphafold/tutorials/attention/: attention.ipynb  mha.py  sentiment_analysis.py
alphafold/tutorials/attention/control_values/: attention_checks.py
alphafold/tutorials/evoformer/: dropout.py  evoformer.ipynb  evoformer.py  msa_stack.py  pair_stack.py
alphafold/tutorials/evoformer/control_values/: evoformer_checks.py
alphafold/tutorials/feature_embedding/: extra_msa_stack.py  feature_embedding.ipynb  input_embedder.py  recycling_embedder.py
alphafold/tutorials/feature_embedding/control_values/: embedding_checks.py
alphafold/tutorials/feature_extraction/: feature_extraction.ipynb  feature_extraction.py
alphafold/tutorials/geometry/: geometry.ipynb  geometry.py
alphafold/tutorials/machine_learning/: feed_forward.py  machine_learning.ipynb
alphafold/tutorials/model/: model.ipynb  model.py  utils.py
alphafold/tutorials/model/control_values/: model_checks.py
alphafold/tutorials/structure_module/: ipa.py  structure_module.ipynb  structure_module.py
alphafold/tutorials/tensor_introduction/: tensor_introduction.ipynb
alphafold/tutorials/tensor_utilities/: analysis.txt  utilities.py
learning_jax/: pyproject.toml  tutorial.py
leet_code/: .gitignore  pyproject.toml
leet_code/exercices/: 01_recursive_backtrack.py  02_merge_strings_alternately.py  03_move_zeroes.py  04_maximum_average.py  05_highest_altitude.py  06_difference_two_arrays.py  07_remove_stars.py  08_number_recent_calls.py  09_delete_linked_list_middle_node.py
(+2 files in other folders)
