[tool.poetry]
name = "leet-code"
version = "0.1.0"
description = "Project For Leet Code Algorithms"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.4.5"
tqdm = "^4.67.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
